# colosseum

./: .dockerignore  .gitignore  PITCH.md  QUICKSTART.txt  README.md  docker-compose.yml  nginx.conf
back/: .env.example  Dockerfile  pyproject.toml
back/app/: main.py
back/app/api/: routes.py
back/app/core/: config.py
back/app/models/: database.py  schemas.py
back/app/services/: nft_service.py  real_nft_service.py  solana_service.py  water_service.py  watercredits_service.py
back/app/utils/: nft_image.py
back/scripts/: oracle_simulator.py
back/static/: watercredits-metadata.json
front/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
front/public/: manifest.json  robots.txt
front/src/: App.jsx  index.css
front/src/components/: FarmerDashboard.jsx  FarmerDashboard.modern.jsx  Icons.jsx  ImprovedFarmerDashboard.jsx  Landing.jsx  ProviderDashboard.jsx  ProviderDashboard.modern.jsx  RoleSelection.jsx  UI.jsx
front/src/components/ui/: Hero.jsx  canvas.jsx
front/src/services/: api.js
nginx/: api.sucount.site.conf  sucount.site.conf
scripts/: generate_keypair.py
